added contentFocus filter to global feeds
